@@ -21,6 +21,7 @@ open Type
 type package_rule =
 	| Forbidden
 	| Directory of string
+	| Remap of string
 
 type platform =
 	| Cross
